update naive bayes

--- a/technique_report.tex
+++ b/technique_report.tex
@@ -82,7 +82,7 @@ Cho một tập dữ liệu đã được gán nhãn $D = \left{ (x^{(i)}, y^{(i
 Ở đây $x^(i)$ là vector đặc trưng thứ $i$ trong tập huấn luyện, $y^(i)$ thuộc ${1, 2, ... , C}$ là các nhãn tương ứng với vector đó.
 $x^{(i)} = \left( x^{(i)}_{1}, x^{(i)}_{2}, ..., x^{(i)}_{D}\right)$ là số lần xuất hiện của từ thứ d trong từ điển (từ giờ sẽ gắn số thứ tự với từ, nên sẽ gọi là từ $d$)
 
-Áp dụng cức Bayes, ta tính giá trị của $p(y|x)$, nếu giá trị này lớn hơn 1 giá trị $t$ cho trước, ta kết luận nhãn của vecotr $x$ là $y$.
+Áp dụng công thức Bayes, ta tính giá trị của $p(y|x)$, nếu giá trị này lớn hơn 1 giá trị $t$ cho trước, ta kết luận nhãn của vecotr $x$ là $y$.
 
 Yêu cầu đặt ra là ngăn chặn spam bằng cách phân loại một email gửi đến là spam hay non-spam. Cần đạt được hiệu quả phân loại thật khả quan.
 Tuy nhiên cần tuyệt đối tránh lỗi sai chằng non-spam là spam vì có thể gây hiêu quả nghiệm trọng hơn là khả năng lọc spam thấp.
