--- a/technique_report.tex
+++ b/technique_report.tex
@@ -7,16 +7,16 @@
 %% Based on the style files for ACL-2014, which were, in turn,
 %% Based on the style files for ACL-2013, which were, in turn,
 %% Based on the style files for ACL-2012, which were, in turn,
-%% based on the style files for ACL-2011, which were, in turn, 
-%% based on the style files for ACL-2010, which were, in turn, 
+%% based on the style files for ACL-2011, which were, in turn,
+%% based on the style files for ACL-2010, which were, in turn,
 %% based on the style files for ACL-IJCNLP-2009, which were, in turn,
 %% based on the style files for EACL-2009 and IJCNLP-2008...
 
-%% Based on the style files for EACL 2006 by 
+%% Based on the style files for EACL 2006 by
 %%e.agirre@ehu.es or Sergi.Balari@uab.es
 %% and that of ACL 08 by Joakim Nivre and Noah Smith
 
-\documentclass[11pt,a4paper]{books}
+\documentclass[11pt,a4paper]{scrbook}
 \usepackage{times}
 \usepackage{multirow}
 \usepackage{url}
@@ -58,7 +58,7 @@
 \newcommand\footnoteref[1]{\protected@xdef\@thefnmark{\ref{#1}}\@footnotemark}
 \makeatother
 
-\title{Technical Notes\\ \small{Tháng 5 năm 2018}}
+\title{Xử lý ngôn ngữ và tiếng nói \\ \small{Tháng 5 năm 2018}}
 
 \include{notation}
 
@@ -73,7 +73,7 @@ anhv.ict91@gmail.com
 \begin{document}
 \maketitle
 \begin{abstract}
-Trong báo cáo này, chúng tôi ghi lại những đặc điểm kỹ thuật và những điều cần chú ý về các thuật toán xử dụng trong xử lý ngôn ngữ tự nhiên.
+Giới thiệu về xử lý ngôn ngữ tự nhiên
 
 \end{abstract}
 
