update title format

--- a/tex/2.tex
+++ b/tex/2.tex
@@ -1,5 +1,10 @@
 \setcounter{chapter}{1}
-\chapter{Biểu thức chính quy, chuẩn hóa text, edit distance}
+
+\chapter{Biểu thức chính quy, chuẩn hóa text\\edit distance}
+
+\epigraphfontsize{\small\itshape}
+\epigraph{``Begin at the beginning," the King said gravely, ``and go on till you
+come to the end: then stop."}{--- \textup{Lewis Carroll}, Alice in Wonderland}
 
 \section{Biểu thức chính quy}
 
