--- a/util/begin.tex
+++ b/util/begin.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,a4paper]{scrbook}
+\documentclass[11pt]{book}
 \usepackage{times}
 \usepackage{multirow}
 \usepackage{url}
@@ -9,17 +9,44 @@
 \usepackage{amsmath}
 \usepackage[title]{appendix}
 
+% quote
+\usepackage{epigraph}
+\setlength\epigraphwidth{8cm}
+\setlength\epigraphrule{0pt}
 
+
+% chapter format
+\usepackage[explicit]{titlesec}
+\usepackage{blindtext, array, color}
+\definecolor{gray75}{gray}{0.75}
+\newcommand{\hsp}{\hspace{20pt}}
+
+\titleformat{\chapter}[block]
+	{\Huge\bfseries}
+	{\color{gray75}\thechapter}{20pt}
+	{\begin{tabular}[t]{@{\color{gray75}\vrule width 2pt}>{\hsp}l}#1\end{tabular}}
+
+\titleformat{\section}[display]
+  {\normalfont\scshape\huge}
+  {\hspace*{-30pt}\thesection.~#1}
+  {-15pt}
+  {\hspace*{-110pt}\Huge}
+
+\titleformat{\subsection}[display]
+  {\normalfont\scshape\large}
+  {\hspace*{-30pt}\thesubsection.~#1}
+  {-15pt}
+  {\hspace*{-110pt}\Huge}
 
 % for pycharm
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
+% \usepackage[T1]{fontenc}
+% \usepackage[utf8]{inputenc}
 % end for pycharm
 
 \usepackage[utf8]{vietnam}
 
-%\usepackage[vietnam,english]{babel}
-%\selectlanguage{vietnam}
+\usepackage[vietnam,english]{babel}
+\selectlanguage{vietnam}
 
 \aclfinalcopy % Uncomment this line for the final submission
 \newcommand\BibTeX{B{\sc ib}\TeX}
@@ -34,6 +61,6 @@
 
 \title{Xử lý ngôn ngữ và tiếng nói}
 
-\include{notation}
+% \include{notation}
 
 \begin{document}
