--- a/tex/1.tex
+++ b/tex/1.tex
@@ -54,7 +54,14 @@ Giờ hãy xem xét một câu hỏi trong hệ thống hỏi đáp:
 
 (1.3) Người Trung Quốc xuất khẩu bao nhiêu lụa sang Tây Âu thông qua qua các thương nhân miền nam?
 
+HAL cũng cần phân biệt câu nói của Dave là một yêu cầu, thay vì là một câu mô tả hay câu hỏi về cái kiểu, như các cách nói khác nhau dưới đây
 
+\begin{tabular}{ l l }
+	 YÊU CẦU: & HAL, Mở các cửa khoang ngủ ra. \\
+	 MÔ TẢ: & HAL, các cửa khoang ngủ đang mở. \\
+	 CÂU HỎI: & HAL, các cửa khoang ngủ có mở không
+	\end{tabular}
+ \label{table:1}
 
 
 
