--- a/util/begin.tex
+++ b/util/begin.tex
@@ -8,6 +8,8 @@
 \usepackage{booktabs}
 \usepackage{amsmath}
 \usepackage[title]{appendix}
+\usepackage{xcolor}
+\usepackage{enumitem}
 
 % quote
 \usepackage{epigraph}
