--- a/tex/1.tex
+++ b/tex/1.tex
@@ -115,7 +115,7 @@ Chúng tôi thường xuyên giới thiệu các mô hình và giải thuật tr
 
 \section{Các mô hình và giải thuật}
 
-
+Một trong những điểm nhấn trong 50 năm nghiên cứu về xử lý ngôn ngữ tự nhiên là rất nhiều kiến thức được trình bày ở phần trước có thể xử lý bằng một vài mô hình và giả thuyết. May mắn thay, các mô hình và giả thuyết này được xuất hiện như những công cụ cơ bản cho khoa học máy tính, toán học, ngôn ngữ học và có thể được áp dụng giống nhau trong các ngành này. Bên cạnh những mô hình quan trọng nhất như state machines, rule systems, logic, probablistic models và vector-space models. Bản thân các mô hình này, lại dựa vào một vài giải thuật cơ bản,  như các giải thuật tìm kiếm trong gian trực thái như dynamic programming, hay các giải thuật vè học máy như các phân lớp và Expected-Maximization (EM) và các giải thuật khác.
 
 
 
