--- a/tex/1.tex
+++ b/tex/1.tex
@@ -115,7 +115,23 @@ Chúng tôi thường xuyên giới thiệu các mô hình và giải thuật tr
 
 \section{Các mô hình và giải thuật}
 
-Một trong những điểm nhấn trong 50 năm nghiên cứu về xử lý ngôn ngữ tự nhiên là rất nhiều kiến thức được trình bày ở phần trước có thể xử lý bằng một vài mô hình và giả thuyết. May mắn thay, các mô hình và giả thuyết này được xuất hiện như những công cụ cơ bản cho khoa học máy tính, toán học, ngôn ngữ học và có thể được áp dụng giống nhau trong các ngành này. Bên cạnh những mô hình quan trọng nhất như state machines, rule systems, logic, probablistic models và vector-space models. Bản thân các mô hình này, lại dựa vào một vài giải thuật cơ bản,  như các giải thuật tìm kiếm trong gian trực thái như dynamic programming, hay các giải thuật vè học máy như các phân lớp và Expected-Maximization (EM) và các giải thuật khác.
+Một trong những điểm nhấn trong 50 năm nghiên cứu về xử lý ngôn ngữ tự nhiên là rất nhiều kiến thức được trình bày ở phần trước có thể xử lý bằng một vài mô hình và giả thuyết. May mắn thay, các mô hình và giả thuyết này được xuất hiện như những công cụ cơ bản cho khoa học máy tính, toán học, ngôn ngữ học và có thể được áp dụng giống nhau trong các ngành này. Bên cạnh những mô hình quan trọng nhất như \textbf{state machines}, \textbf{rule systems}, \textbf{logic}, \textbf{probabilistic models} và \textbf{vector-space models}. Bản thân các mô hình này, lại dựa vào một vài giải thuật cơ bản, như các giải thuật tìm kiếm trong gian trạng thái như \textbf{dynamic programming}, hay các giải thuật về học máy như các phân lớp và \textbf{Expected-Maximization (EM)} và các giải thuật khác.
+
+Ở dạng đơn giản nhất, state machines là các mô hình hình thức bao gồm trạng thái, chuyển giữa các trạng thái, và một biểu diễn đầu vào. Một vài biến thể của mô hình cơ bản này như \textbf{deterministic} và \textbf{non-deterministic finite-state automata} và \textbf{finite-state transducers}.
+
+Liên quan chặt chẽ đến các mô hình này là các hệ thống formal rule. Chúng ta sẽ xem xét những mô hình quan trọng nhất như \textbf{regular grammars} và \textbf{regular relations}, \textbf{context-free grammars}, và \textbf{feature-augmented grammars}. Các hệ thống máy trạng thái và formal rule là các công cụ chính để xử lý các tri thức về âm vị học, ngôn ngữ hình thái học và cú pháp.
+
+Lớp mô hình thứ ba đóng vai trò quan trọng trong việc mô hình hóa tri thức là logic. Chúng ta sẽ tìm hiểu về \textbf{first order logic}, hay còn gọi là \textbf{predicate calculus}, cũng như các mô hình hình thức liên quan như lambda-calculus, feature-structues hay semantic primitives. Các biểu diễn logic này thường được sử dụng để mô hình hóa ngữ nghĩa và ngữ dụng, mặc dù các kỹ thuật gần đây thường tập trung vào các phương pháp hiệu quả hơn từ các ngữ liệu phi logic.
+
+Mô hình xác suất đóng vai trò quan trọng trong việc mô hình hóa tất cả các cấp độ về ngôn ngữ. Từng mô hình khác (state machines, formal rule systems hay logic) có thể tăng cường với xác suất. Ví dụ, state machine có thể tăng cường với xác suất để trở thành \textbf{weighted automaton} hay \textbf{Markov model}. Chúng ta cũng sẽ dành một thời lượng nhất định cho \textbf{hidden Markov models} hay \textbf{HMMs}, được sử dụng ở mọi nơi, trong gán nhãn từ loại, nhận dạng tiếng nói, hiểu hội thoại, tổng hợp tiếng nói và dịch máy. Một điểm quan trọng của mô hình xác xuất là khả năng có thể giải quyết được nhiều loại nhập nhằng đã đề cập trước đó; hầu hết các bài toán về xử lý ngôn ngữ và tiếng nói có thể coi như "cho N lựa chọn từ một đầu vào nhập nhằng, chọn lựa chọn có khả năng xảy ra cao nhất".
+
+Cuối cùng, vector-space models, dựa vào đại số tuyến tính, được sử dụng trong bài toán trích rút thông tin và nghĩa từ.
+
+Xử lý ngôn ngữ sử dụng những mô hình này thường liên quan đến bài toán tìm kiếm trong một không gian trạng thái biểu diễn các giả định từ một đầu vào. Trong nhận dạng tiếng nói, chúng ta cần tìm kiểm trong một không gian các chuỗi âm cho một từ đầu ra. Trong bài toán phân tích cú pháp, chúng ta cần tìm kiếm trong không gian các cây biểu diễn cú pháp cho một câu đầu vào. Trong dịch máy, chúng ta cần tìm kiếm trong không gian các giả định đầu ra cho một ngôn ngữ cho một câu đầu vào ở ngôn ngữ khác. Trong các bài toán không dựa xác suất, thường liên quan đến các máy trạng thái, chúng ta sử dụng các thuật toán phổ biến về đồ thị như \textbf{depth-first search}. Đối với các bài toán dựa xác suất, chúng ta thường sử dụng nhiều giải thuật heuristic như \textbf{best-first} hay \textbf{A* search}, và dựa vào các giải thuật quy hoạch động để giảm khối lượng tính toán.
+
+Các công cụ học máy như \textbf{các bộ phân lớp} và \textbf{các mô hình chuỗi} đóng một vị trí quan trọng trong nhiều bài toán xử lý ngôn ngữ. Dựa vào tính chất của  từng đối tượng, một bộ phân lớp thường gán mỗi đối tượng cho một lớp trong khi môt mô hình chuỗi cố gắng chuỗi các chuỗi đối tượng thành chuỗi các lớp.
+
+Ví dụ, trong bài toán xác định một từ có đúng chính tả hay không, các bộ phân lớp như cây quyết định, support vector machines, Gaussian Mixture Models, và logistic regression
 
 
 
