--- a/tex/1.tex
+++ b/tex/1.tex
@@ -135,6 +135,12 @@ Ví dụ, trong bài toán xác định một từ có đúng chính tả hay kh
 
 Cuối cùng, các nhà nghiên cứu xử lý ngôn ngữ sử dụng rất nhiều công cụ từ các nhà nghiên cứu trong lĩnh vực học máy - như sử dụng tập huấn luyện và tập test, các kỹ thuật thống kê như \textbf{cross-validation}, và việc đánh giá hệ thống đã huấn luyện một cách kỹ lưỡng.
 
+\section{Ngôn ngữ, suy nghĩ và sự hiểu biết}
+
+Với nhiều người, khả năng máy tính có thể xử lý được ngôn ngữ một cách thành thạo như con người là tín hiệu của một cổ máy với trí thông minh thực sự. Nguyên nhân của niềm tin này đến từ việc sử dụng ngôn ngữ hiệu quả gắn lớn với các khả năng nhận thức của chúng ta. Một trong những người đầu tiên coi tác động tính toán của sự liên hệ này là Alan Turing (1950). Trong bài báo nổi tiếng này, Turing giới thiệu một thử nghiệm mà sau này được biết với tên Turing test. Turing bắt đầu với một luận điểm rằng câu hỏi "Liệu máy tính có thể nghĩ" là một câu hỏi không thể trả lời được vì sự thiếu chính xác vốn có trong cụm từ máy tính và nghĩ. Thay vào đó, ông đề xuất một phép thử thực tế, một trò chơi, trong đó việc sử dụng ngôn ngữ của máy tính cho thấy khả năng suy nghĩ của nó. Nếu máy tính có thể thắng trò chơi này, nó sẽ được đánh giá là thông minh.
+
+Trong trò chơi của Turing, có ba bên tham gia: hai người và một máy tính. Một người đóng vai trò là người chơi và đóng vai trò là người hỏi.
+
 
 
 
