--- a/tex/1.tex
+++ b/tex/1.tex
@@ -137,12 +137,78 @@ Cuối cùng, các nhà nghiên cứu xử lý ngôn ngữ sử dụng rất nhi
 
 \section{Ngôn ngữ, suy nghĩ và sự hiểu biết}
 
-Với nhiều người, khả năng máy tính có thể xử lý được ngôn ngữ một cách thành thạo như con người là tín hiệu của một cổ máy với trí thông minh thực sự. Nguyên nhân của niềm tin này đến từ việc sử dụng ngôn ngữ hiệu quả gắn lớn với các khả năng nhận thức của chúng ta. Một trong những người đầu tiên coi tác động tính toán của sự liên hệ này là Alan Turing (1950). Trong bài báo nổi tiếng này, Turing giới thiệu một thử nghiệm mà sau này được biết với tên Turing test. Turing bắt đầu với một luận điểm rằng câu hỏi "Liệu máy tính có thể nghĩ" là một câu hỏi không thể trả lời được vì sự thiếu chính xác vốn có trong cụm từ máy tính và nghĩ. Thay vào đó, ông đề xuất một phép thử thực tế, một trò chơi, trong đó việc sử dụng ngôn ngữ của máy tính cho thấy khả năng suy nghĩ của nó. Nếu máy tính có thể thắng trò chơi này, nó sẽ được đánh giá là thông minh.
+Với nhiều người, khả năng máy tính có thể xử lý được ngôn ngữ một cách thành thạo như con người là dấu hiệu của trí thông minh thực sự. Nguyên nhân của niềm tin này đến từ việc sử dụng ngôn ngữ hiệu quả gắn lớn với các khả năng nhận thức của chúng ta. Một trong những người đầu tiên coi tác động của sự liên hệ đó là Alan Turing (1950). Trong bài báo nổi tiếng này, Turing giới thiệu một thử nghiệm mà sau này được biết với tên Turing test. Turing bắt đầu với một luận điểm, rằng câu hỏi "Liệu máy tính có thể nghĩ" là một câu hỏi không thể trả lời được vì sự thiếu chính xác vốn có trong cụm từ \textit{máy tính} và \textit{nghĩ}. Thay vào đó, ông đề xuất một phép thử thực tế, một trò chơi, trong đó việc sử dụng ngôn ngữ của máy tính cho thấy khả năng suy nghĩ của nó. Nếu máy tính có thể thắng trò chơi này, nó sẽ được đánh giá là thông minh.
 
-Trong trò chơi của Turing, có ba bên tham gia: hai người và một máy tính. Một người đóng vai trò là người chơi và đóng vai trò là người hỏi.
+Trong trò chơi của Turing, có ba bên tham gia: hai người và một máy tính. Một người đóng vai trò là người chơi và đóng vai trò là người hỏi. Để chiến thắng, người hỏi cần phải xác định xem hai thành viên còn lại ai là máy tính bằng cách hỏi một chuỗi câu hỏi thông qua việc gõ bàn phím. Nhiệm vụ của máy tính là lừa người hỏi tin rằng nó là con người bằng cách trả lời các câu hỏi. Nhiệm vụ của người chơi thứ hai là thuyết phục người hỏi, người chơi kia là máy tính, mình mới là con người.
 
+Đoạn hội thoại dưới đấy được lấy từ bài báo của Turing minh họa cho trò chơi. Rõ rằng, việc giả là người không cần yêu cầu kiến thức của tất cả các lĩnh vực
 
+\vspace{1em}
+\hspace*{-6em}
+\begin{tabular}{ l | l}
+  Q: Please write me a sonnet on the topic of Forth Bridge  & Hãy viết một bài thơ về chủ đề cầu Forth \\
+  A: Count me out on this one. I never could write poetry & Bỏ qua cho tôi câu này. Tôi chưa bao giờ làm thơ \\
+  Q: Add 34957 to 70764 & Cộng 34957 với 70764\\
+  A: (Pause about 30 seconds and the give answer as) 105621 & (Dừng 30 giây sau đó trả lời) 105621 \\
+\end{tabular}
 
+Turing dự đoán đến hết thế kỷ hai mươi, một chiếc máy tính với 10 gigabytes bộ nhớ có khoảng 30% cơ hội lừa một người hỏi sau 5 phút hỏi đáp. Có một thực tế rằng bạn có thể lừa một vài người tất cả thời gian, không rõ rằng tiêu chuẩn này sẽ nghiêm ngặt đến đâu. Mặt khác, vấn đề quan trọng của Turing là việc sử dụng ngôn ngữ thành thạo như con người, là một cách thử trí thông minh.
 
+Rất ngạc nhiên, nhiều vấn đề được đề xuất bởi Turing liên hệ nhiều đến chương trình \textbf{ELIZA} xuất hiện vào năm 1966 (Weizenbaum, 1966). ELIZA là hệ thống xử lý ngôn ngữ tự nhiên có khả năng thực hienẹ một số đoạn hội thoại với người dùng. Cùng xem xét đoạn hội thoại sau đây với một phiên bản của ELIZA
 
+\vspace{0.15cm}
+\hspace*{-1cm}
+\begin{tabular}{ l l }
+  User_1: & \makecell[l]{You are like my father in some ways. \vspace{-0.15cm} \\
+    \scriptsize{\textit{Bạn rất giống bố tôi}}}  \\
+  ELIZA_1: & \makecell[l]{WHAT RESEMBLANCE DO YOU SEE \vspace{-0.15cm} \\
+    \scriptsize{\textit{BẠN THẤY GIỐNG Ở ĐIỂM NÀO}}} \\
+  User_2: & \makecell[l]{You are not very aggressive but I think you don't want me to notice that. \vspace{-0.15cm} \\
+    \scriptsize{\textit{Bạn không quá hung hăng nhưng tôi không ngữ bạn muốn tôi để ý điều đó }}} \\
+  ELIZA_2: & \makecell[l]{WHAT MAKES YOU THINK I AM NOT AGGRESSIVE \vspace{-0.15cm} \\
+    \scriptsize{\textit{ĐIỀU GÌ KHIẾN BẠN NGHĨ TÔI KHÔNG HUNG HĂNG}}} \\
+  User_3: & \makecell[l]{You don't argue with me \vspace{-0.15cm} \\
+    \scriptsize{\textit{Bạn không cãi nhau với tôi}}} \\
+  ELIZA_3: & \makecell[l]{WHY DO YOU THINK I DON'T ARGUE WITH YOU \vspace{-0.15cm} \\
+    \scriptsize{\textit{TẠI SAO BẠN NGHĨ TÔI KHÔNG CÃI NHAU VỚI BẠN}}} \\
+  User_4: & \makecell[l]{You are afraid of me. \vspace{-0.15cm} \\
+    \scriptsize{\textit{Bạn sợ tôi}}} \\
+  ELIZE_4: & \makecell[l]{DOES IT PLEASE YOU TO BELIEVE I AM AFRAID OF YOU \vspace{-0.15cm} \\
+    \scriptsize{\textit{BẠN NGHĨ RẰNG TÔI SỢ BẠN À?}}}
+\end{tabular}
 
+Như chúng tôi sẽ thảo luận chi tiết trong chương 2, ELIZA là một chương trình rất đơn giản sử dụng pattern-matching để xử lý đầu ra và chuyển thành đầu ra tương ưnggs. Sự thành công của kỹ thuật đơn giản trong lĩnh vực này dựa vào việc ELIZA không thực sự cần biết điều gì để giả người. Như trong ghi chép của WWeizanbaum, đây là một trong số ít các loại hội thoại trong đó người nghe có thể phản hồi mà không cần biết điều gì về thế giới.
+
+ELIZA liên hệ nhiều đến ý tưởng của Turing khi có nhiều người tương tác với ELIZE đã tin nó thực sự hiểu họ và vấn đề của họ. Hơn nữa, Weizenbaum (1976) cho thấy nhiều người tiếp tục tin vào khả năng của ELIZA thậm chí cách thức hoạt động của nó được giải thích cho họ. Trong những năm sau, Thí nghiệm của Weizenbaum được lặp lại trong các môi trường khác nhau. Năm 1991, một sự kiện được biết đến như cuộc thi Loebner Prize được tổ chức, cố gắng đưa nhiều chương trình máy tính vào thí nghiệm Turing. Mặc dù những cuộc thi như vậy không thu hút nhiều giới khoa học, những kết quả qua từng năm cho thấy ngay cả các chương trình đơn giản nhất cũng có lúc có thể lừa các giám khảo (Shieber, 1994a). Không ngạc nhiên, các kết quả đó không thể dập tắt được được cuộc tranh luận về tính thích hợp của phép thử Turing cho việc kiểm tra trí thông minh giữa các nhà triết học và các nhà nghiên cứu trí tuệ nhân tạo (Searle, 1980).
+
+May thay, với mục đích của cuốn sách, các kết quả đó không liên quan đến việc khả năng của máy tính trong việc trở nên thông minh, hay hiểu ngôn ngữ tự nhiên. Điều quan trọng hơn nữa là các kết quả nghiên cứu trong lĩnh vực xã hội học đã khẳng định một dự báo của Turing trong cùng bài báo đó.
+
+\begin{adjustwidth}{1.5cm}{}
+Tôi tin rằng cuối thế kỷ này, việc sử dụng từ và các ý kiến được giáo dục sẽ thay đổi nhiều đến mức chúng ta có thể trò chuyện với các máy tính suy nghĩ mà không mong đợi được phản đối.
+\end{adjustwidth}
+
+Bây giờ rõ ràng là bất kể mọi người tin hay biết gì về cách thức hoạt động của máy tính, mọi người thường nói về chúng và tương tác với chúng như là những thực thể trong xã hội. Mọi người thường nói chuyện với máy tính nếu họ nghĩ máy tính là người; họ sẽ lịch sự, đối xử như những thành viên, hi vọng rằng máy tính có thể hiểu nhu cầu của họ, và có thể tương tác với họ một cách tự hiên. Ví dụ, Reeves và Nass (1966) phát hiện rằng khi một máy tính hỏi một người đánh giá máy tính như thế nào, người đó đưa ra nhiều phản hồi tính cực khi một máy tính khác hỏi các câu tương tự. Con người thường sợ trở nên bất lịch sự. Trong một thử nghiệm khác, Reeves và Nass phát hiện rằng con người thường cho điểm cao hơn nếu máy tính biết tâng bốc. Từ các thiên hướng này, các hệ thống dựa vào ngôn ngữ và tiếng nói cần đưa cho người dùng những giao diện tự nhiên nhất. Điều này dẫn đến sự tập trung dài hơn vào thiết kế cho các \textbf{máy giao tiếp} v àhệ thống thông minh có thể đối thoại.
+
+\section{Các kết quả tốt nhất}
+
+\setlength\epigraphwidth{0.75\textwidth}
+\epigraphfontsize{\small}
+\epigraph{
+\itshape Chúng ta chỉ có thể nhìn thấy một quãng đường ngắn trước mắt, nhưng chúng ta có thể thấy rất nhiều việc cần làm.\\
+}{Alan Turing.}}
+
+Hiện tại là thời điểm sôi động lĩnh vực xử lý ngôn ngữ và tiếng nói. Bát đầu từ việc có nhiều tài nguyên tính toán hơn, việc phát triển của Web đưa đến một lượng lớn thông tin có thể thu thập được hỗ trợ việc phát triển mọi khía cạnh của các ứng dụng xử lý ngôn ngữ và tiếng nói. Các ví dụ dưới đây đưa ra các hệ thống đã được triển khai trong xu hướng này: 
+
+\begin{itemize}
+  \item Các công ty du lịch như Amtrak, United Airlines hay các nhà cung cấp du lịch khác đưa ra các chương trình hội thoại có thể hướng dẫn trong quá trình đặt vé và đưa ra các thông tin về các chuyến đi.
+  \item Các công ty xe cao cấp như Mercedes-Benz đưa ra các hệ thống tổng hợp và nhận diện tiếng nói có thể cho người lái điều kiển các hệ thống môi trường, gỉai trí và định vị trong xe bằng giọng nói. Hệ thống thoại tương tự cũng được triển khai cho các phi hành gia ở Interational Space Station. 
+  \item Blinkx và các công ty trong lĩnh vực tìm kiếm vidoe khác cung cấp các dịch vụ tìm kiếm cho hàng triệu giờ video trên Web sử dụng công nghệ nhận diện tiếng nói để xác định các từ trong video.
+  \item Google cung cấp các dịch vụ dịch và trích rút thông tin đa ngôn ngữ khi người dùng có thể gõ câu hỏi tìm kiếm bằng ngôn ngữ mẹ đẻ trong các ngôn ngữ khác. Google sẽ tự động dịch câu hỏi, tìm kiếm những trang web thích hợp và sau đó tự động dịch chúng lại về tiếng bản ngữ của người dùng.
+  \item Các tổ chức xuất bản lớn như Pearson, hay các dịch vụ kiểm tra như ETS, sử dụng các hệ thông tự động để phân tích, chấm điểm và đánh giá hàng ngàn bài luận của sinh viên.
+  \item Các hệ thống hướng dẫn tự động, dựa vào các nhân vật hoạt hình, dạy trả em đọc (Wise et al., 2017).
+  \item Các công ty phân tích văn bản như Nielsen, Buzzmetrics, Umbria và Collective Intellect cung cấp các dịch vụ tiếp thị thông minh dựa và việc tự động giá ý định, sở thích, tính cách và thái độ của người dùng từ các trang web và forum.
+\end{itemize}
+
+\section{Một vài lịch sử ngắn gọn}
+
+Trong lịch sử,
