--- a/tex/1.tex
+++ b/tex/1.tex
@@ -239,4 +239,10 @@ Gia đoạn tiếp theo chứng kiến sự bùng nổ trong nghiên cứu về 
 
 Mô hình stochastic đóng vai trò to lớn trong sự phát triển các giải thuật nhận dạng tiếng nói trong giai đoạn này, đặc biệt là việc sử dụng mô hình Hidden Markov Model và metaphor trong noisy channel và decoding, phát triển độc lập bởi Jelinek, Bahl, Mercer và các đồng nghiệp tại trung tâm nghiên cứu IBM's Thomas J. Watson, Baker tại đại học Carnegie Mellon University, người chịu ảnh hởi bởi các công trình của Baum và đồng nghiệp tại Institute for Defense Analysis tại Princeton. AT&T's Bell Laboratories cũng đóng vai trò trung tập trung lĩnh vực xử lý và tổng hợp tiếng nói, đọc Rabiner và Juang (1993) để biết thêm chi tiết về công trình này.
 
-Mô hình dựa logic được bắt đầu từ công trình của Colmerauer và đồng nghiệp trong Q-systems và metamorphosis grammars (Colmerauer, 1970, 1975),
+Mô hình dựa logic được bắt đầu từ công trình của Colmerauer và đồng nghiệp trong Q-systems và metamorphosis grammars (Colmerauer, 1970, 1975), tiền thân của Prolog và Define Clause Grammars (Pereira và Warren, 1980). Một cách độc lập, các công trình của Kay (1979) về ngữ pháp hàm, Bresnan và Kaplan (1982) về LFG, cho thấy sự quan trọng của cấu trúc đặc trưng thống nhất.
+
+Lĩnh vực hiểu ngôn ngữ cũng bắt đầu trong giai đoạn này, với hệ thống SHRDLU của Terry Winograd, giả lập một con robot trong môt thế giới của các viên gạch đồ chơi (Winograd, 1972a). Chương trình có thể hiểu được các lệnh bằng ngôn ngữ tự nhiên (đặt viên gạch màu đỏ lên trên viên gạch nhỏ màu xanh) rất phức tạp. Hệ thống này còn có khả năng xây dựng một ngữ pháp tiếng Anh, dựa vào hệ thống ngữ pháp của Halliday. Mô hình của Winograd cho thấy vấn đề parsing đã được hiểu đầy đủ để bắt đầu tập trung vào các mô hình về ngữ nghĩa và diễn ngôn. Roger Schank cùng các đồng nghiệp và sinh viên xây dựng các chương trình hiểu ngôn ngữ tập trung vào các tri thức về kịch bản, kế hoạch và mục tập và tổ chức bộ nhớ con người (Schank và Albelson, 1977; Schank và Riesbeck, 1981; Cullingford, 1981; Wilensky, 1983; Lehnert, 1977). Các công trình này sử dụng các mô hình ngữ nghĩa dựa mạng lưới (Quillian, 1968; Norman và Rumelhart, 1975; Schank, 1972; Wilks, 1975c, 1975b; Kínch, 1974) và bắt đầu kết hợp với các lưu ý của Fillmore về case roles (Fillmore, 1968) trong biểu diễn của họ (Simmons, 1973).
+
+Các mô hình dựa vào logic và hiểu ngôn ngữ tự nhiên được kết hợp trong các hệ thống sử dụng logic vị từ như phương pháp biểu diễn ngữ nghĩa, như hệ thống hỏi đáp LUNAR (Woods, 1967, 1973).
+
+Mô hình diễn ngôn tập trung vào bốn lĩnh vực trong diễn ngôn. Grosz và các cộng sự giới thiệu các nghiên cứu về kết cấu con trong diễn ngôn và tập trung diễn ngôn (Grosz, 1977a; Sidner, 1983), một số nhà nghiên bắt đầu nghiên cứu về tự động phân giải tham chiếu (Hobbs, 1978), và mô hình BID (Belief-Desire-Intention) cho các công trình dựa logic trong xử lý tiếng nói (Perrault và Allen, 1980; Cohen và Perrault, 1979).
