add table style

--- a/tex/1.tex
+++ b/tex/1.tex
@@ -145,12 +145,15 @@ Trong trò chơi của Turing, có ba bên tham gia: hai người và một máy
 
 \vspace{1em}
 \hspace*{-6em}
+\colorbox{background}{
 \begin{tabular}{ l | l}
   Q: Please write me a sonnet on the topic of Forth Bridge  & Hãy viết một bài thơ về chủ đề cầu Forth \\
   A: Count me out on this one. I never could write poetry & Bỏ qua cho tôi câu này. Tôi chưa bao giờ làm thơ \\
   Q: Add 34957 to 70764 & Cộng 34957 với 70764\\
   A: (Pause about 30 seconds and the give answer as) 105621 & (Dừng 30 giây sau đó trả lời) 105621 \\
 \end{tabular}
+}
+
 
 Turing dự đoán đến hết thế kỷ hai mươi, một chiếc máy tính với 10 gigabytes bộ nhớ có khoảng 30% cơ hội lừa một người hỏi sau 5 phút hỏi đáp. Có một thực tế rằng bạn có thể lừa một vài người tất cả thời gian, không rõ rằng tiêu chuẩn này sẽ nghiêm ngặt đến đâu. Mặt khác, vấn đề quan trọng của Turing là việc sử dụng ngôn ngữ thành thạo như con người, là một cách thử trí thông minh.
 
@@ -158,6 +161,7 @@ Rất ngạc nhiên, nhiều vấn đề được đề xuất bởi Turing liê
 
 \vspace{0.15cm}
 \hspace*{-1cm}
+\colorbox{background}{
 \begin{tabular}{ l l }
   User_1: & \makecell[l]{You are like my father in some ways. \vspace{-0.15cm} \\
     \scriptsize{\textit{Bạn rất giống bố tôi}}}  \\
@@ -176,6 +180,8 @@ Rất ngạc nhiên, nhiều vấn đề được đề xuất bởi Turing liê
   ELIZE_4: & \makecell[l]{DOES IT PLEASE YOU TO BELIEVE I AM AFRAID OF YOU \vspace{-0.15cm} \\
     \scriptsize{\textit{BẠN NGHĨ RẰNG TÔI SỢ BẠN À?}}}
 \end{tabular}
+}
+
 
 Như chúng tôi sẽ thảo luận chi tiết trong chương 2, ELIZA là một chương trình rất đơn giản sử dụng pattern-matching để xử lý đầu ra và chuyển thành đầu ra tương ưnggs. Sự thành công của kỹ thuật đơn giản trong lĩnh vực này dựa vào việc ELIZA không thực sự cần biết điều gì để giả người. Như trong ghi chép của WWeizanbaum, đây là một trong số ít các loại hội thoại trong đó người nghe có thể phản hồi mà không cần biết điều gì về thế giới.
 
