--- a/tex/1.tex
+++ b/tex/1.tex
@@ -252,3 +252,17 @@ Lĩnh vực hiểu ngôn ngữ cũng bắt đầu trong giai đoạn này, với
 Các mô hình dựa vào logic và hiểu ngôn ngữ tự nhiên được kết hợp trong các hệ thống sử dụng logic vị từ như phương pháp biểu diễn ngữ nghĩa, như hệ thống hỏi đáp LUNAR (Woods, 1967, 1973).
 
 Mô hình diễn ngôn tập trung vào bốn lĩnh vực trong diễn ngôn. Grosz và các cộng sự giới thiệu các nghiên cứu về kết cấu con trong diễn ngôn và tập trung diễn ngôn (Grosz, 1977a; Sidner, 1983), một số nhà nghiên bắt đầu nghiên cứu về tự động phân giải tham chiếu (Hobbs, 1978), và mô hình BID (Belief-Desire-Intention) cho các công trình dựa logic trong xử lý tiếng nói (Perrault và Allen, 1980; Cohen và Perrault, 1979).
+
+\subsection{Chủ nghĩa kinh nghiệm và mô hình hữu hạn trạng thái Redux: 1983-1993}
+
+Thập kỷ tiếp theo chứng kiến hai lớp mô hình đã không còn phổ biến từ cuối những năm 1950 hoặc đầu những năm 1960, đặc biệt là do các lập luận lý thuyết chống lại chúng như những đánh giá của Chomsky về Skinner's Verbal Behavior (Chomsky, 1959b). Mô hình đầu tiên là các mô hình hữu hạn trạng thái, bắt đầu nhận được sự chú ý trở lại từ các công trình về âm vị học và ngôn ngữ hình thái học hữu hạn trạng thái của Kaplan và Kay (1981) và các mô hình hữu hạn trạng thái của Church (1980). Quyển sách này dành một thời lượng lớn cho các mô hình hữu hạn trạng thái sẽ được trình bày ở các chương sau.
+
+Xu hướng thứ hai trong giai đoạn này là cái mà được gọi là "sự quay lại của chủ nghĩa kinh nghiệm", với điểm nhấn đáng chú ý nhất là sự phát triển của các mô hình xác suất trong xử lý ngôn ngữ và tiếng nói, ảnh hưởng mạnh mẽ bởi các công trình tại IBM Thomas J. Watson Research Center với các mô hình xác suất trong bài toán nhận dạng tiếng nói. Các phương pháp dựa xác suất và các cách tiếp cận hướng dữ liệu lan tỏa từ tiếng nói đến các bài toán gán nhãn từ loại, parsing và ngữ nghĩa. Hướng đi thực dụng này cũng đi cùng bởi một hướng tiếp cận mới trong đánh giá mô hình, dựa vào việc lựa chọn dữ liệu, phát triển các độ đo định tính cho việc đánh giá, và việc chú ý so sánh chất lượng qua các độ đo so với các báo cáo đã xuất bản trước đó.
+
+Giai đoạn này cũng xuất hiện các công trình đáng chú ý trong lĩnh vực sinh ngôn ngữ.
+
+\subsection{Kết hợp các lĩnh vực: 1994-1999}
+
+Năm năm cuối của thiên niên trải qua sự thay đổi to lớn trong lĩnh vực này. Đầu tiên, các mồ hình xác suất và hướng dữ liệu đã trở thành tiêu chuẩn trong việc xử lý ngôn ngữ tự nhiên. Các thuật toán cho parsing, gán nhãn từ loại, phân giải đồng tham chiếu và diễn ngôn tất cả đều được kết hợp với xác suất, và sự phát triển các phương pháp đánh giá lấy ý tưởng từ nhận dạng tiếng nói và truy hồi thông tin. Thứ hai, việc tăng tốc độ và bộ nhớ của máy tính cho phép tiếp cận với các lĩnh vực con của xử lý ngôn ngữ và tiêng nói, như tổng hợp tiếng nói hay kiểm tra lỗi chính tả và ngữ pháp. Các thuật toán xử lý ngôn ngữ và tiếng nói bắt đầu được áp dụng cho Augmentative và Alternative Communication (AAC). Cuối cùng, sự phát triển của Web nhấn mạnh sự cần thiết của các hệ thống truy hồi và trích rút thông tin dựa ngôn ngữ.
+
+\subsection{Sự phát triển của học máy: 2000-2007}
