--- a/tex/1.tex
+++ b/tex/1.tex
@@ -200,7 +200,7 @@ Bây giờ rõ ràng là bất kể mọi người tin hay biết gì về cách
 \setlength\epigraphwidth{0.75\textwidth}
 \epigraphfontsize{\small}
 \epigraph{
-\itshape Chúng ta chỉ có thể nhìn thấy một quãng đường ngắn trước mắt, nhưng chúng ta có thể thấy rất nhiều việc cần làm.\\
+\itshape Chúng ta chỉ nhìn thấy một quãng đường ngắn trước mắt, nhưng chúng ta có thể thấy rất nhiều việc cần làm.\\
 }{Alan Turing.}}
 
 Hiện tại là thời điểm sôi động lĩnh vực xử lý ngôn ngữ và tiếng nói. Bát đầu từ việc có nhiều tài nguyên tính toán hơn, việc phát triển của Web đưa đến một lượng lớn thông tin có thể thu thập được hỗ trợ việc phát triển mọi khía cạnh của các ứng dụng xử lý ngôn ngữ và tiếng nói. Các ví dụ dưới đây đưa ra các hệ thống đã được triển khai trong xu hướng này: 
