--- a/util/begin.tex
+++ b/util/begin.tex
@@ -1,4 +1,7 @@
 \documentclass[11pt]{book}
+\usepackage[utf8]{vietnam}
+\usepackage[vietnam,english]{babel}
+
 \usepackage{times}
 \usepackage{multirow}
 \usepackage{url}
@@ -8,6 +11,7 @@
 \usepackage{amsmath}
 \usepackage[title]{appendix}
 \usepackage{enumitem}
+\usepackage{cite}
 
 % ######################################
 %                 QUOTE
@@ -65,11 +69,6 @@
 
 % new line in cell
 \usepackage{makecell}
-
-\usepackage[utf8]{vietnam}
-
-\usepackage[vietnam,english]{babel}
-\selectlanguage{vietnam}
 
 \aclfinalcopy % Uncomment this line for the final submission
 \newcommand\BibTeX{B{\sc ib}\TeX}
